--- a/formulario.css
+++ b/formulario.css
@@ -6,14 +6,14 @@
 
 /* Elementos com o ID "titulo" */
 #titulo {
-    font-family: sans-serif;
+    font-family: 'Roboto Mono', monospace;
     color: #380B61;
     margin-left: 7%;
 } 
 
 /* Elementos com o ID "subtitulo" */
 #subtitulo {
-    font-family: sans-serif;
+    font-family: 'Roboto Mono', monospace;
     color: #380B61;
     margin-left: 10%;
 } 
@@ -30,17 +30,18 @@ fieldset {
 /* Elemento de tag <body> */
 body{
     background-color: #F0F8FF;
-    font-family: sans-serif;
+    font-family: 'Roboto Mono', monospace;
     font-size: 1em;
     color: #59429d;
     margin-left: 36%;
     margin-top: 2%;
+    margin-bottom: 5%;
     justify-content: center;
 }
 
 /* Elementos de tags <body>, <input>, <Select>, <textarea> e <button> */
 input, select, textarea, button {
-    font-family: sans-serif;
+    font-family: 'Roboto Mono', monospace;
     font-size: 1em;
     color: #59429d;
     border-radius: 5px;
@@ -103,15 +104,15 @@ fieldset.grupo .campo {
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
     position: absolute;
-    top: 90%;
-    left: 50%;
+    top: 100%;
+    left: 63%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
 
 /* Elemento de classe "botao" com o estado da pseudoclasse "hover" */
 .botao:hover {
-    background: #CCBBFF;
+    background: #8b64ff;
     box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: none;
 }
